move storage pool build and start to handlers
these steps are not idempotent, so we only want to do them when we
have to define the pool as new

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,3 +4,15 @@
   service:
     name: libvirtd
     state: restarted
+
+- name: Build storage pool
+  become: true
+  virt_pool:
+    command: build
+    name: default
+
+- name: Start storage pool
+  become: true
+  virt_pool:
+    command: start
+    name: default
