--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,5 @@
 ---
 # vars file for openshift-libvirt
+openshift_libvirt_base_domain: tt.testing
+openshift_libvirt_cluster_name: test1
+openshift_libvirt_cluster_ip_range: "192.168.126.0/24"
