--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,17 +11,18 @@
       - gcc-c++
 
 # FIXME: This repo needs to have a gpg key set up. Which one?
-# - name: Add kvm-common yum repository
-#   become: true
-#   yum_repository:
-#     name: kvm-common
-#     baseurl: http://mirror.centos.org/centos/7/virt/x86_64/kvm-common/
-#     description: kvm-common, from https://github.com/openshift/installer/blob/master/docs/dev/libvirt-howto.md
+- name: Add kvm-common yum repository
+  become: true
+  yum_repository:
+    name: kvm-common
+    baseurl: http://mirror.centos.org/centos/7/virt/x86_64/kvm-common/
+    description: kvm-common, from https://github.com/openshift/installer/blob/master/docs/dev/libvirt-howto.md
 
 - name: Install libvirt and qemu packages
   become: true
-  package:
+  yum:
     state: latest
+    disable_gpg_check: yes
     name:
       - libvirt
       - libvirt-devel
