--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -163,14 +163,18 @@
   notify:
     - reload NetworkManager
 
-- name: Update iptables to allow insecure libvirt clients
+- name: Update firewalld to allow libvirt clients from VMs (port)
   become: true
-  iptables:
-    action: insert
-    chain: INPUT
-    protocol: tcp
+  firewalld:
+    port: 16509/tcp
+    state: enabled
+    immediate: yes
+    permanent: yes
+
+- name: Update firewalld to allow libvirt clients from VMs (IPs)
+  become: true
+  firewalld:
     source: "{{ openshift_libvirt_cluster_ip_range }}"
-    destination: "{{ openshift_libvirt_libvirt_ip.stdout }}"
-    destination_port: 16509
-    jump: ACCEPT
-    comment: "Allow insecure libvirt clients"
+    state: enabled
+    immediate: yes
+    permanent: yes
