use the gateway IP for the cluster IP range for the dnsmasq config

--- a/templates/NetworkManager-openshift.conf
+++ b/templates/NetworkManager-openshift.conf
@@ -1,1 +1,1 @@
-server=/{{ openshift_libvirt_base_domain }}/{{ openshift_libvirt_libvirt_ip.stdout }}
+server=/{{ openshift_libvirt_base_domain }}/{{ openshift_libvirt_cluster_ip_range | ipaddr('1') | ipaddr('address') }}
